* doc/emacs/msdog.texi (Windows Printing): It doesn't set printer-name. * admin/FOR-RELEASE: Related edit.
Ref http://lists.gnu.org/archive/html/emacs-devel/2012-04/msg00402.html

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,5 +1,7 @@
 2012-04-14  Glenn Morris  <rgm@gnu.org>
 
+	* msdog.texi (Windows Printing): It doesn't set printer-name.
+
 	* mule.texi (Language Environments): Move font info to "Fontsets".
 	(Fontsets): Move intlfonts etc here from "Language Environments".
 	Copyedits.
