--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,9 +1,11 @@
 2012-04-15  Glenn Morris  <rgm@gnu.org>
 
 	* processes.texi (Processes, Subprocess Creation, Shell Arguments):
-	(Synchronous Processes): Copyedits.
+	(Synchronous Processes, Asynchronous Processes, Deleting Processes):
+	Copyedits.
 	(Subprocess Creation): Discourage modifying exec-path directly.
-	(Synchronous Processes): Update some example output.
+	(Synchronous Processes, Asynchronous Processes):
+	Update some example output.
 	(Process Information): Fix typo.
 	(Bindat Spec): Use Texinfo-recommended form of quote+punctuation.
 
