Move "emacsclient -t -n" handling from emacsclient.c to server.el. Fix its buggy logic for the Windows case (regression from 23.4).
* lib-src/emacsclient.c (decode_options): Move -t -n corner case handling
into server.el.

* lisp/server.el (server-process-filter): Handle corner case where both
tty and nowait options are present.

--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-15  Chong Yidong  <cyd@gnu.org>
+
+	* emacsclient.c (decode_options): Move -t -n corner case handling
+	into server.el (Bug#11102).
+
 2012-04-12  Juanma Barranquero  <lekktu@gmail.com>
 
 	* emacsclient.c (decode_options) [WINDOWSNT]:
